# growatt-bridge

./: .env.example  .env.test  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
apps/growatt-api-explorer/: .env.example  README.md  pyproject.toml  requirements.txt
apps/growatt-api-explorer/scripts/: test_openapi_v1.py
apps/growatt-api-explorer/src/growatt_explorer/: __init__.py  client.py
docs/: connection-test-findings.md  growatt-cloud-api.md  parameter-glossary.md  references.md
docs/parameters/: battery-policy.md  charge-discharge.md  export-limit.md  safety-constraints.md  time-segments.md
scripts/: test_connection.py  test_integration.py
scripts/explore/: _base.py  fetch_min_params.py  fetch_tlx_telemetry.py  map_read_all_min_param.py  min_param_key_label.py  probe_login.py  probe_tlx_write_roundtrip.py
skill/: SKILL.md
specs/001-api-redesign/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-api-redesign/checklists/: requirements.md
specs/001-api-redesign/contracts/: README.md  error-envelope.schema.json  versioning.md  write-request.schema.json
src/growatt_bridge/: __init__.py  client.py  config.py  connectivity.py  legacy_shine_web.py  main.py  models.py  safety.py
src/growatt_bridge/routes/: __init__.py  commands.py  config_read.py  devices.py  health.py  plants.py  telemetry.py  write_operations.py
tests/: conftest.py  test_client_error_format.py  test_config.py  test_connectivity.py  test_legacy_shine_web.py  test_models.py  test_routes_commands.py  test_routes_read.py  test_safety.py  test_write_operations_catalog.py
tests/integration/: conftest.py  test_reads.py  test_writes.py
