[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "growatt-bridge"
version = "0.3.0"
description = "FastAPI bridge service wrapping Growatt OpenAPI V1 with safety layer for AI agent control"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "growattServer>=2.0.0",
    "requests>=2.33.0",
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.43.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "httpx>=0.28.0",
    "pytest-asyncio>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "integration: requires GROWATT_API_TOKEN and a live Growatt Cloud connection",
]
